SubVersion: $Id$

- 14/07/2004, version 1.74: roms
	SDL removed for GTK: screen and keyboard support rewritten from scratch !
	Debugger raised on event from thread.

- 12/07/2004, version 1.73: roms
	To do:
	- link port is broken (HW2 only ?!)
	- stealth I/O and mem protect

	HW1 protection is emulated excepted for archive memory limit.

- 07/07/2004, version 1.72: roms
	Error management connected and updated.
	Fixed 'restrict to current speed'.
	Synch item disabled for now.
	Fixed bugs in state image loading as well as in LCD initialization 
		(no LCD updates after state image loading).
	Linkport reworked but seems to be buggy with HW2 ?!
	Fixed IMG_INFO structure: size was incorrect.
	Added new field to IMG_INFO: ROM base address.
	Navigate with arrow keys in the mem dbox.
	Save of breakpoints in the state image.
	Fixed code breakpoint which was buggy.
	Added symbolic debugger (replace address by name; take a look at 0x4f89fe on TI92+).

- 30/06/2004, version 1.71: roms
	Lionel Debroux's suggestions:
	- debugger access is slow: improved by pre-loading windows.
	- can't scroll into the code window: fixed (VTi uses a fixed size list without scrollers)
	- window focus: fixed (list of the code window has default focus)
	- shortcuts (F2, G, ...): fixed
	- key mapping pb (EE, |): fixed
	- pb with Alpha key: fixed
	- no key auto-repeat: fixed
	- long names with the ROM version box: fixed
	- disasm listing is bad(): fixed 
		* mv2sr (move xx,sr) at ?? (TI92 1.11)
		* mvmel (movem) at 0x24b90c (TI92 1.11)
		* trap# (trap #) at 0x20212e (TI92 1.11)
	- SR flags (VTi emulation): fixed

	Fixes:
	- disable menu access when debugger is opened.
	- I/O bits manipulation functions moved into bits.h and fixed (bit_set/clr buggy) but
		direct file loading is now broken.
	- fixed ON key (works and set on/off LCD screen).

	Improvements:
	- added VTi-style disassembly view

- 05/05/2004, version 1.70: roms
	Rework in progress.	

=====> TiEmu II project re-starts here <=====
